--- a/src/styles.css
+++ b/src/styles.css
@@ -73,12 +73,14 @@ body {
   
   .current-temperature-icon {
     position: relative;
-    top: -8px;
+    top: 8px;
     font-size: 40px;
     margin-right: 10px;
   }
   
   .current-temperature-value {
+    position: relative;
+    top: -8px;
     font-size: 80px;
     font-weight: bold;
   }
@@ -86,7 +88,7 @@ body {
   .current-temperature-unit {
     font-size: 28px;
     position: relative;
-    top: -38px;
+    top: -45px;
   }
   
   footer {
